--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "core": "NODE_ENV=development nodemon --inspect"
+  },
   "dependencies": {
+    "@babel/cli": "^7.12.16",
+    "@babel/node": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@types/node": "^14.14.26",
     "axios": "^0.21.1",
+    "humanize-duration": "^3.25.1",
     "jspredict": "^1.1.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "quadrant-bearing": "^0.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
