--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@babel/preset-env": "^7.12.16",
     "@types/node": "^14.14.26",
     "axios": "^0.21.1",
+    "base-64": "^1.0.0",
+    "fs": "^0.0.1-security",
     "humanize-duration": "^3.25.1",
     "jspredict": "^1.1.1",
     "moment": "^2.29.1",
+    "path": "^0.12.7",
     "quadrant-bearing": "^0.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
